--- a/style.css
+++ b/style.css
@@ -12,124 +12,144 @@
     }
 }
 
-h1, button, div, p
-{
-   font-family: Crimson Text, serif;
-}
-
-h1
-{
-    text-align: center;
-    font-size: 10vw;
-    padding-top: 11%;
-    margin: 0 0 50px 0;
-}
-
-#menu button
-{
-    margin: 0 42%;
-    width: 15%;
-    height: 60px;
-    cursor: pointer;
-}
-
-#greeting + button
-{
-    margin-top: 3%;
-}
-
-#greeting p
-{
-    text-align: center;
-    font-family: Crimson Text, serif;
-    font-size: 30px;
-}
-
 html
 {
-    background-color: #8395a7;
     overflow: hidden;
+}
+
+body
+{
+    background: #8395a7;
+}
+
+button
+{
+    outline: none;
+    border: none;
+    cursor: pointer;
+    font-family: Pixel, serif;
+    font-size: 50px;
 }
 
 #menu
 {
-    height: 100vh;
     display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
     margin: 0;
 }
 
-#menu p
+#menu h1
+{
+    font-family: Crimson Text, serif;
+    text-align: center;
+    font-weight: bold;
+    font-size: 100px;
+    margin: 15% 0;
+}
+
+#menu button
 {
     text-align: center;
-    font-size: 25px;
-    font-weight: bold;
-    margin: 0;
-}
-
-#start
-{
-    border-radius: 10px;
-    background-color: #95a5a6;
-    color: black;
-    font-size: 15px;
-    font-weight: bold;
-    outline: none;
-    border: none;
-}
-
-#buttons
-{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    position: relative;
-    bottom: 100%;
-    left: 54%
+    margin: 0 43% 20% 43%;
+    width: 15%;
+    height: 50px;
 }
 
 #gamefield
 {
     display: none;
     width: 100%;
-    height: 100vh;
-    background-color: #8395a7;
-    margin: 0;
+    height: 100%;
 }
 
-#gamefield .buttons
+#doc
 {
-   display: flex;
-   flex-direction: row;
-   align-items: center;
-   justify-content: flex-start;
+    background: url("images/doc.png") no-repeat;
+    width: 32%;
+    height: 405px;
+    position: absolute;
+    top: 20%;
+    left: 5%;
 }
 
-#pass,#next,#decline
+#doc h1
 {
-    width: 200px;
-    height: 100px;
-    text-align: center;
-    color: black;
-    font-weight: bold;
-    font-size: 50px;
+    padding-top: 20px;
+    margin: 0 19%;
+    font-size: 80px;
+}
+
+#doc h1, #doc p , #score, #miss, #timer, .help p
+{
     font-family: Pixel, serif;
+}
+
+#doc p
+{
+    font-size: 35px;
+    padding-left: 25px;
+    margin: 5px 0;
+}
+
+.help
+{
+    background: url("images/help.png");
+    width: 19%;
+    height: 320px;
+    position: absolute;
+    top: 27%;
+    left: 30%;
+
+}
+
+.help p
+{
+    font-size: 35px;
+    margin: 5px 0;
+    padding-left: 25px;
+}
+
+.panel
+{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+#score, #miss, #timer
+{
+    font-size: 40px;
+}
+
+#face
+{
+    width: 350px;
+    height: 210px;
+    position: absolute;
+    border: 10px solid #000000;
+    left: 65%;
+    top: 25%;
+}
+
+#buttons
+{
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
+    height: 300px;
+    position: absolute;
+    left: 60%;
+    top: 60%;
+}
+
+#pass, #decline
+{
+    width: 60%;
+    height: 50%;
+    margin: 10% 3%;
     box-shadow: 5px 5px #000000;
-    outline: none;
-    border: none;
-    margin-left: 3%;
-    cursor: pointer;
-}
-
-#pass
-{
-    background-color: #2ecc71;
-}
-
-#pass:hover
-{
-    background-color: #27ae60;
-    transition: 0.7s;
 }
 
 #decline
@@ -139,83 +159,18 @@ html
 
 #decline:hover
 {
-    background-color: #d63031;
+    background-color: #ff3838;
     transition: 0.7s;
 }
 
-.panel
+#pass
 {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    background-color: #44bd32;
 }
 
-#face
-{
-    width: 350px;
-    height: 210px;
-    position: relative;
-    bottom: 250px;
-    left: 60%;
-    animation: fadeIn 5s ease;
-    border: 10px solid #000000;
-}
-
-.help
-{
-    background: url("images/help.png") no-repeat;
-    width: 262px;
-    height: 400px;
-    position: relative;
-    margin: 0;
-    bottom: 77%;
-    left: 25%;
-}
-
-.help p
-{
-    font-family: Pixel, serif;
-    font-size: 35px;
-    padding-left: 20px;
-    margin-top: 10px;
-    margin-bottom: 0;
-}
-
-#score, #miss, #timer
-{
-    font-family: Pixel, serif;
-    font-size: 70px;
-    font-weight: bold;
-
-}
-
-#doc
-{
-    width: 300px;
-    height: 400px;
-    background: url("images/doc.png") no-repeat;
-    position: relative;
-    margin: 0;
-    top: 100px;
-}
-
-#doc h1
+#pass:hover
 {
 
-    text-align: center;
-    font-size: 80px;
-    font-family: Pixel, serif;
-    margin: 0;
-    padding-top: 10px;
-}
-
-#doc p
-{
-    font-family: Pixel, serif;
-    font-size: 35px;
-    text-align: left;
-    padding-left: 40px;
-    margin: 13px 0;
-    animation: fadeIn 1s ease;
+    background-color: #4cd137;
+    transition: 0.7s;
 }
