--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ html
 body
 {
     background: #8395a7;
+    margin: 0;
 }
 
 button
@@ -46,15 +47,21 @@ button
     text-align: center;
     font-weight: bold;
     font-size: 100px;
-    margin: 15% 0;
+    padding: 10% 5%;
+    border-top: 5px solid #000000;
+    border-bottom: 5px solid #000000;
+    width: 80%;
+    margin: 5% 5% 0 5%;
 }
 
-#menu button
+#start
 {
-    text-align: center;
-    margin: 0 43% 20% 43%;
-    width: 15%;
-    height: 50px;
+    width: 250px;
+    height: 80px;
+    border: none;
+    outline: none;
+    margin: 3% 41% 0 41%;
+    box-shadow: 10px 10px #000000;
 }
 
 #gamefield
@@ -64,10 +71,52 @@ button
     height: 100%;
 }
 
+#lose
+{
+    text-align: center;
+    font-family: "Times New Roman", serif;
+    font-size: 65px;
+    font-weight: bold;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+    display: none;
+    margin: 0;
+    background: #eb2f06;
+    animation: fadeIn 1.5s ease;
+    position: absolute;
+}
+
+#lose p
+{
+    margin: 20% 10%;
+}
+
+#win
+{
+    text-align: center;
+    font-family: "Times New Roman", serif;
+    font-size: 65px;
+    font-weight: bold;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+    display: none;
+    margin: 0;
+    background: #05c46b;
+    animation: fadeIn 1.5s ease;
+    position: absolute;
+}
+
+#win p
+{
+    margin: 20% 10%;
+}
+
 #doc
 {
     background: url("images/doc.png") no-repeat;
-    width: 32%;
+    width: 330px;
     height: 405px;
     position: absolute;
     top: 20%;
@@ -77,7 +126,7 @@ button
 #doc h1
 {
     padding-top: 20px;
-    margin: 0 19%;
+    margin: 0 24%;
     font-size: 80px;
 }
 
@@ -96,7 +145,7 @@ button
 .help
 {
     background: url("images/help.png");
-    width: 19%;
+    width: 250px;
     height: 320px;
     position: absolute;
     top: 27%;
@@ -114,13 +163,13 @@ button
 .panel
 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     position: relative;
 }
 
 #score, #miss, #timer
 {
-    font-size: 40px;
+    font-size: 70px;
 }
 
 #face
